gcc/testsuite/gdc.test/compilable/imports/test1238b.d
module imports.test1238b;

public int zuiop;
