gcc/testsuite/gdc.test/fail_compilation/imports/spell9644a.d
module imports.spell9644a;

public import imports.spell9644b;

int cora;
int pub;
private int priv;
